cmake_minimum_required(VERSION 3.16)

project(homework_3_10_2)

add_executable(homework_3_10_2
	main.cpp
	EquilateralTriangle.h
	Figure.h
	Functions.h
	IsoscelesTriangle.h
	Parallelogram.h
	Quadrangle.h
	Rectangle.h
	Rhomb.h
	RightTriangle.h
	Square.h
	Triangle.h
	EquilateralTriangle.cpp
	Figure.cpp
	Functions.cpp
	IsoscelesTriangle.cpp
	Parallelogram.cpp
	Quadrangle.cpp
	Rectangle.cpp
	Rhomb.cpp
	RightTriangle.cpp
	Square.cpp
	Triangle.cpp
	)

